kubernetes/config-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: config-test

spec:
  containers:
    - name: config-test
      image: curlimages/curl
      command: ["sleep", "3600"]
