kubernetes/cpu-capacity-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cpu-capacity-test
spec:
  containers:
    - name: nginx
      image: nginx:1.27
      resources:
        requests:
          cpu: "8"
