kubernetes/cpu-scheduling-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: cpu-scheduling-test
spec:
  containers:
    - name: nginx
      image: nginx:1.27
      resources:
        requests:
          cpu: "600m"
