kubernetes/empdir-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: empdir-test

spec:
  containers:
    - name: app1
      image: nginx:1.30.5
      volumeMounts:
        - name: shared-storage
          mountPath: /data

  volumes:
    - name: shared-storage
      emptyDir: {} #emptyDir survives a container restart, but it does NOT survive Pod deletion.
