kubernetes/limitrange-max-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: limitrange-max-test
  namespace: quota-lab
spec:
  containers:
    - name: nginx
      image: nginx:1.27
      resources:
        requests:
          cpu: "10m"
        limits:
          cpu: "1000m"
