kubernetes/liveness-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liveness-test

spec:
  replicas: 1
  selector:
    matchLabels:
      app: liveness-test

  template:
    metadata:
      labels:
        app: liveness-test
    spec:
      containers:
        - name: nginx
          image: nginx:1.30.5
          livenessProbe:
            failureThreshold: 1
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
