kubernetes/pvc-test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-test-pod

spec:
  containers:
    - name: pvc-test-container
      image: busybox:1.37
      command: ["sh", "-c", "while true; do sleep 3600; done"]
      volumeMounts:
        - name: persistent-data
          mountPath: /data
  volumes:
    - name: persistent-data
      persistentVolumeClaim:
        claimName: app-data-claim
