kubernetes/scheduler-test.yml
apiVersion: v1
kind: Pod

metadata:
  name: scheduler-test-pod

spec:
  containers:
    - name: scheduler-test-container
      image: nginx:latest

      resources:
        requests:
          cpu: "1"
          memory: "512Mi"
