kubernetes/secret-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-test

spec:
  containers:
    - name: secret-test
      image: curlimages/curl
      command: ["sleep", "3600"]
