kubernetes/sharedempdir-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: sharedempdir-test

spec:
  containers:
    - name: writer
      image: busybox:1.37
      command: ["sh", "-c", "while true; do sleep 3600; done"]
      volumeMounts:
        - name: shared-data
          mountPath: /data
    - name: reader
      image: busybox:1.37
      command: ["sh", "-c", "while true; do sleep 3600; done"]
      volumeMounts:
        - name: shared-data
          mountPath: /data

  volumes:
    - name: shared-data
      emptyDir: {} #emptyDir survives a container restart, but it does NOT survive Pod deletion.
