kubernetes/slow-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slow-server

spec:
  replicas: 1
  selector:
    matchLabels:
      app: slow-server
  template:
    metadata:
      labels:
        app: slow-server
    spec:
      containers:
        - name: slow-server
          image: python:3.13-alpine
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
            initialDelaySeconds: 15
          command:
            - python
            - -c
            - |
              import time
              from http.server import BaseHTTPRequestHandler, HTTPServer

              class Handler(BaseHTTPRequestHandler):
                  def do_GET(self):
                      time.sleep(3)
                      self.send_response(200)
                      self.end_headers()
                      self.wfile.write(b"Slow response\n")

              HTTPServer(("0.0.0.0", 8080), Handler).serve_forever()
          ports:
            - containerPort: 8080
