kubernetes/readiness-service.yml
apiVersion: v1
kind: Service
metadata:
  name: readiness-service

spec:
  selector: # To fetch the pods with the label "app: readiness-test"
    app: readiness-test
  ports:
    - port: 80 # the port that the service will expose
      targetPort: 80 # The port on the pod that the service should forward traffic to
